@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.douban.com"
        name="douban"
-       version="1.1.1"
+       version="1.1.2"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
