@@ -9,18 +9,18 @@
 		</RegExp>
 	</NfoUrl>
 	<GetUrlByIMDBId dest="3">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url&gt;http://api.douban.com/v2/movie/subject/\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;details&gt;" dest="3">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url&gt;https://api.douban.com/v2/movie/subject/\1&lt;/url&gt;&lt;id&gt;\1&lt;/id&gt;&lt;details&gt;" dest="3">
 			<expression>&quot;url&quot;:&quot;http:\\/\\/movie.douban.com\\/subject\\/([0-9]+)\\/[^&quot;]*&quot;</expression>
 		</RegExp>
 	</GetUrlByIMDBId>
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://api.douban.com/v2/movie/search?q=\1&lt;/url&gt;" dest="3">
+		<RegExp input="$$1" output="&lt;url&gt;https://api.douban.com/v2/movie/search?q=\1&lt;/url&gt;" dest="3">
 			<expression noclean="1"/>
 		</RegExp>
 	</CreateSearchUrl>
 	<GetSearchResults dest="8">
 		<RegExp input="$$3" output="&lt;results sorted=&quot;yes&quot;&gt;\1&lt;/results&gt;" dest="8">
-			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1 - \2 (\3)&lt;/title&gt;&lt;url&gt;http://api.douban.com/v2/movie/subject/\4&lt;/url&gt;&lt;id&gt;\4&lt;/id&gt;&lt;/entity&gt;" dest="3+">
+			<RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\1 - \2 (\3)&lt;/title&gt;&lt;url&gt;https://api.douban.com/v2/movie/subject/\4&lt;/url&gt;&lt;id&gt;\4&lt;/id&gt;&lt;/entity&gt;" dest="3+">
 				<expression repeat="yes">&quot;title&quot;: &quot;([^&quot;]*)&quot;, &quot;casts&quot;: \[[^\]]*\], &quot;collect_count&quot;: [0-9]*, &quot;original_title&quot;: &quot;([^&quot;]*)&quot;, &quot;subtype&quot;: &quot;movie&quot;, &quot;directors&quot;: \[[^\]]*\], &quot;year&quot;: &quot;(\d*)&quot;, &quot;images&quot;: \{[^\}]*\}, &quot;alt&quot;: &quot;[^&quot;]*&quot;, &quot;id&quot;: &quot;(\d*)&quot;</expression>
 			</RegExp>
 			<expression noclean="1" fixchars="1"/>
@@ -77,7 +77,7 @@
 				<expression noclean="1" clear="yes" fixchars="1">&quot;casts&quot;: \[(.+?)\]</expression>
 			</RegExp>
 			<RegExp input="$$8" output="&lt;actor&gt;&lt;thumb&gt;http://\2/img/celebrity/large/\3.jpg&lt;/thumb&gt;&lt;name&gt;\4&lt;/name&gt;&lt;/actor&gt;" dest="5+">
-				<expression noclean="1" repeat="yes">&quot;avatars&quot;: (null|.*?&quot;large&quot;: &quot;http://(.+?)\\/img\\/celebrity\\/large\\/(.+?).jpg&quot;[^\}]*\}), &quot;name&quot;: &quot;(.+?)&quot;</expression>
+				<expression noclean="1" repeat="yes">&quot;avatars&quot;: (null|.*?&quot;large&quot;: &quot;https://(.+?)\\/img\\/celebrity\\/large\\/(.+?).jpg&quot;[^\}]*\}), &quot;name&quot;: &quot;(.+?)&quot;</expression>
 			</RegExp>
 			<RegExp input="$$2" output="&lt;url cache=&quot;\1-poster.html&quot; function=&quot;GetPoster&quot;&gt;https://movie.douban.com/subject/\1/photos?type=R&lt;/url&gt;" dest="5+">
 				<expression/>
@@ -94,7 +94,7 @@
 	<GetDetailsByIMDBId dest="5">
 		<RegExp input="$$6" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
 			<RegExp conditional="trailer" input="$$1" output="&lt;trailer&gt;http://movie.douban.com/trailer/video_url?tid=\1&lt;/trailer&gt;" dest="6">
-				<expression>http://movie.douban.com/trailer/([0-9]+)</expression>
+				<expression>https://movie.douban.com/trailer/([0-9]+)</expression>
 			</RegExp>
 			<RegExp input="$$1" output="\1" dest="8">
 				<expression noclean="1">编剧&lt;/span&gt;:(.*?)&lt;/span&gt;</expression>
