@@ -1,3 +1,6 @@
+[B]1.1.2[/B]
+- fixed: api changed to https
+
 [B]1.1.1[/B]
 - fixed: posts and fanarts url changed
 
